<resources>
    <string name="app_name">Vasantham Stores</string>
    <!--<string name="splash1_1">Just Order and Relax !</string>&lt;!&ndash;Send Packages with \nQuality&ndash;&gt;
    <string name="sample1">Our riders will picks up your order and brings it to you.</string>
    <string name="sample2">We are providing home services at your door steps.</string>
    <string name="sample3">We ensure the safety measures on orders,preparation and delivery !!</string>
    <string name="splash_2">Providing services at your door steps</string>&lt;!&ndash;Daily Grocery and Fruits, \nVagitables&ndash;&gt;
    <string name="splash_3">Contactless Deivery !!</string>&lt;!&ndash;Meat and Fish \nFresh Eat&ndash;&gt;-->

    <string name="splash1_1">Sit back and Relax !</string><!--Send Packages with \nQuality-->
    <string name="sample1">Our riders will picks up your order and brings it to you.</string>
    <string name="sample2">Enjoy shopping ! we bring your orders with care to your doorstep.</string>
    <string name="sample3">Explore more , Save more , delicious orders and stay healthy !!</string>
    <string name="splash_2">Anything from Anywhere</string><!--Daily Grocery and Fruits, \nVagitables-->
    <string name="splash_3">Fresh Food or Grocery !!</string><!--Meat and Fish \nFresh Eat-->

    <string name="linearmanager">androidx.recyclerview.widget.LinearLayoutManager</string>
    <string name="work_u">Work</string>
    <string name="home_u">Home</string>
    <string name="other_u">Other</string>

    <string name="htmls">

        <u>*  View Estimate Delivery Charges </u>


    </string>
    <string name="html">
        <![CDATA[
        <h1>Terms & Conditions Apply</h1>
        <ul>
        <li>One</li>
        <li>Two</li>
        <li>Three</li>
        </ul>
        ]]>
    </string>
    <string name="add_address_title">Did You Hear the Knocking sound ?</string>
    <string name="add_address_des">You don\'t have any address saved. so kindly add address that hepls you checkout faster.</string>
    <string name="add_an_address">add an address</string>

    <string name="connection_error">Connection Error</string>
    <string name="connection_des">Please check your Network connectivity and try again.</string>
    <string name="retry">retry</string>
    <string name="contact_us">www.vasanthamstore.com</string>

    <string name="time_square">Time square</string>
    <string name="i_am_snippet">I am snippet</string>

    <string name="view_digital_card"><u>View Digital Card</u></string>
    <string name="home">Home</string>
    <string name="loyalty_points">Loyalty Points</string>
    <string name="points">Points</string>
    <string name="shopbycat">Shop by Category</string>
    <string name="see_all">See All</string>
    <string name="payment">Payment</string>
    <string name="cardnumber">Card Number</string>
    <string name="name">Name</string>
    <string name="loantype">Loan Type</string>
    <string name="pendingamount">Pending Amount</string>
    <string name="pendingdues">Pending Dues</string>
    <string name="orderid">Order ID</string>
    <string name="paynow">PAY NOW</string>
    <string name="trackonmap">Track on Map</string>
    <string name="welcometo">Welcome To</string>
    <string name="vasanthamstores">Vasantham Stores</string>
    <string name="entercard">Enter Your Card No :</string>
    <string name="submit">Submit</string>
    <string name="gotolist">Go To List</string>
    <string name="recentlyused">Recently Used :</string>
    <string name="chit">Chit</string>
    <string name="fund1">Fund1</string>
    <string name="fund2">Fund2</string>
    <string name="amount">Amount</string>
    <string name="s_no">S.No</string>
    <string name="month">Month</string>
    <string name="date_amp_time"><![CDATA[Date&Time]]></string>
    <string name="rec_no">Rec.No</string>
    <string name="previouspaid">* Previous Paid Dues</string>
    <string name="viewalldues">View All Dues</string>


    <string name="creat_card">Create Card</string>
    <string name="select_year">Select Year</string>
    <string name="selecte_chit_group">Select Chit Group</string>
    <string name="number">Number</string>
    <string name="card_number">Card Number</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="address">Address</string>
    <string name="select_group">Select Group</string>
    <string name="select_area">Select Area</string>
    <string name="agent">Agent</string>
    <string name="select_fund1">Select Fund1</string>
    <string name="selec_fund2">Select Fund2</string>
    <string name="cards">Cards</string>
    <string name="date">Date</string>
    <string name="custmer_name">Customer Name</string>
    <string name="customer_phone">Customer Phone</string>
    <string name="delivery_amount">Delivery Amount</string>
    <string name="address_line1">Address Line 1</string>
    <string name="address_line2">Address Line 2</string>
    <string name="landmark">Landmark</string>
    <string name="pincode">Pincode</string>
    <string name="door_delivery">Door Delivery</string>
    <string name="alt_mobile_number">Alternate Mobile Number</string>
    <string name="applycoupon">Apply Coupon</string>
    <string name="apply">Apply</string>
    <string name="loanamount">Loan Amount</string>

    <string name="Home">Home</string>
    <string name="Search">Search</string>
    <string name="Orders">Orders</string>
    <string name="Profile">Profile</string>
    <string name="dob">DOB</string>
    <string name="gender">Gender</string>
    <string name="email">Email</string>
    <string name="coupon_amount">Coupon Amount :</string>
    <string name="payable_amount">Payable Amount :</string>
    <string name="viewbills"><u>View Bills</u></string>
    <string name="redeem">Redeem</string>
    <string name="billamnt">Bill Amount</string>
    <string name="pointsearned">Points Earned</string>
    <string name="coming_soon">Coming Soon</string>


</resources>
